<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/allMenuBackgroung"
            android:orientation="vertical">
            <include
                android:id="@+id/toolbarBinding"
                layout="@layout/toolbar"></include>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                tools:context=".view.activities.HelpActivity"
                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <id.co.skoline.view.custom.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/helpPage_title"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:background="@drawable/box_shape"
                    android:padding="10dp"
                    app:textStyle="Bold"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/faqRecycle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/box_shape"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp">
                </android.support.v7.widget.RecyclerView>
                <id.co.skoline.view.custom.CustomTextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/contacts"
                    android:textSize="20sp"
                    android:background="@drawable/box_shape"
                    app:textStyle="Bold"
                    android:padding="15dp"/>
                <id.co.skoline.view.custom.CustomTextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/address"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:background="@drawable/box_shape"
                    app:textStyle="Bold"
                    android:padding="15dp"/>

                <id.co.skoline.view.custom.CustomTextView
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mail"
                    android:textSize="15sp"
                    />


                <id.co.skoline.view.custom.CustomEditText
                    android:id="@+id/mail"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:hint="@string/mail_hint"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:background="@drawable/box_shape"
                    android:gravity="start"/>
                <Button
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:layout_gravity="right"
                    android:onClick="sendMail"
                    />
            </LinearLayout>

            </ScrollView>
        </LinearLayout>

</layout>