<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/orange_gradient_bg"
            android:orientation="vertical"
            android:padding="30dp"
            tools:context=".view.activities.OtpActivity">



            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <ImageView
                    android:id="@+id/appLogo"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:src="@drawable/logo_skoline"
                    android:gravity="left"
                    android:layout_weight="1"
                    />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/welcomeLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/fajar"
                    android:layout_weight="1"
                    />


                <id.co.skoline.view.custom.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/sms_varification_text"
                    />

                <id.co.skoline.view.custom.CustomEditText
                    android:id="@+id/varificationCode"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@drawable/box_shape"
                    android:hint="@string/smsVarification_hint"
                    android:layout_weight="1"
                    android:padding="8dp"
                    />

                <Button
                    android:id="@+id/varifyButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/boxbutton"
                    android:padding="5dp"
                    android:onClick="signIn"
                    android:textColor="@color/colorWhite"
                    android:text="@string/varificationButton_text"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/resendCodeButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/boxbutton"
                    android:padding="5dp"
                    android:onClick="subscriptionProcess"
                    android:text="@string/resendCode_text"
                    android:textColor="@color/colorWhite"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/backSignupButton"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/boxbutton"
                    android:padding="5dp"
                    android:onClick="backToSignUp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/signUpBackButton_text"
                    android:layout_weight="1"
                    />
            </LinearLayout>

            </LinearLayout>


</layout>


