<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_gradient_bg"
            android:orientation="vertical"
            android:padding="25dp"
            tools:context=".view.activities.SignUpActivity">

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:src="@drawable/logo_skoline" />

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/welcomeLogo"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/fajar" />

            <id.co.skoline.view.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorWhite"
                android:text="@string/name_info" />

            <id.co.skoline.view.custom.CustomEditText
                android:id="@+id/uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_shape"
                android:padding="10dp"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:hint="@string/name_hint" />

            <id.co.skoline.view.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorWhite"
                android:text="@string/childName_info" />

            <id.co.skoline.view.custom.CustomEditText
                android:id="@+id/childName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_shape"
                android:padding="10dp"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:hint="@string/childName_hint" />

            <id.co.skoline.view.custom.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:text="@string/dob" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/day"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:background="@drawable/boxshape_left"
                    android:entries="@array/Day"
                    android:padding="5dp"
                    android:textAlignment="center"
                    />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="30dp"
                    android:paddingRight="6dp"
                    android:background="@drawable/boxshape_right"
                    android:src="@drawable/drop_down_arrow" />

                <Spinner
                    android:id="@+id/month"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/boxshape_left"
                    android:entries="@array/Months"
                    android:padding="5dp" />
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="30dp"
                    android:paddingRight="6dp"
                    android:background="@drawable/boxshape_right"
                    android:src="@drawable/drop_down_arrow" />

                <Spinner
                    android:id="@+id/year"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/boxshape_left"
                    android:padding="5dp"
                    android:textAlignment="center"/>
                <ImageView
                    android:layout_width="18dp"
                     android:layout_height="30dp"
                    android:paddingRight="6dp"
                    android:background="@drawable/boxshape_right"
                    android:src="@drawable/drop_down_arrow" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >
                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="100dp"
                    android:layout_height="44dp"
                    app:ccp_showPhoneCode="true"
                    app:ccp_showNameCode="false"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_countryAutoDetectionPref="SIM_NETWORK_LOCALE"
                    android:background="@drawable/box_shape"
                    app:ccpDialog_showFastScroller="false"
                    app:ccpDialog_keyboardAutoPopup="false"
                    app:ccp_showFlag="true"
                    />

                <id.co.skoline.view.custom.CustomEditText
                    android:id="@+id/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/box_shape"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:hint="@string/number_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/placeholder"
                    android:tint="@color/colorWhiteLight"
                    android:background="@drawable/boxshape_left"
                    android:padding="10dp" />

                <id.co.skoline.view.custom.CustomEditText
                    android:id="@+id/location"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="45dp"
                    android:background="@color/colorWhite"
                    android:padding="10dp"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:hint="@string/location_hint" />

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:tint="@color/colorWhiteLight"
                    android:src="@drawable/current_location"
                    android:background="@drawable/boxshape_right"
                    android:padding="10dp" />

            </LinearLayout>
            <id.co.skoline.view.custom.CustomTextView
                android:id="@+id/locationInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorWhite"
                android:text="@string/location_info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">

                <id.co.skoline.view.custom.CustomTextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="@string/newspaper_text"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/emailSwitch"
                    style="@style/SwitchTheme"
                    android:tag="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <id.co.skoline.view.custom.CustomEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_shape"
                android:padding="10dp"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:enabled="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">

                <id.co.skoline.view.custom.CustomTextView
                    android:id="@+id/terms"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:linksClickable="true"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"/>

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/termsSwitch"
                    style="@style/SwitchTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/boxbutton"
                android:padding="10dp"
                android:onClick="verify"
                android:text="@string/signup_button"
                android:textColor="@color/Gray"
                android:enabled="false"
                />
        </LinearLayout>
    </ScrollView>
</layout>