<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/magenta_gradient_bg"
        android:orientation="vertical"
        android:padding="25dp"
        tools:context=".view.activities.SubscriptionActivity">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:src="@drawable/logo_skoline" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/subsCriptionLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/bela_benar" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_marginTop="250dp"
            android:id="@+id/subsCriptionLogo1"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:src="@drawable/bela_benar"
            android:visibility="gone" />

        <id.co.skoline.view.custom.CustomTextView
            android:id="@+id/subscriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:text="@string/subscriptionTxt" />

        <Button
            android:id="@+id/subs1"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@drawable/box_purplebutton"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:onClick="sucess"
            android:text="@string/subButton1" />

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/subs2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@drawable/box_purplebutton"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:onClick="failed"
            android:text="@string/subButton2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

</layout>


